--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="author" content="arnav kumar">
+        <meta name="author" content="frank loyd">
         <!--Description-->
         <meta name="description" content="Syntax Highlighting Made Easy!">
         <!--View Port-->
